--- a/src/Okno2.css
+++ b/src/Okno2.css
@@ -6,14 +6,10 @@
   align-items: center;
   align-content: center; 
   justify-content: center; 
-  overflow: auto;
+  /* overflow: auto; */
 }
 
-#inp2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+
 
 .img1 {
   height: 80px;
@@ -31,17 +27,23 @@
   margin-top: 2px;
   margin-bottom: 3px;
 }
-.input23 {
-  margin: 10px;
-  height: 29px;
-  width: 26px;
-  border-radius: 4px;
-  border-color: rgb(133, 133, 133);
-  border-width: 1px;
-  padding-left: 7px;
-  margin-top: 40px;
-  margin-bottom: 20px;
+
+#inp2 {
+  display: inline-flex;
 }
+#inp1 {
+  width: 29px;
+  height: 25px;
+  margin: 10px;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  padding: 3px;
+  border-radius: 3px;
+  border-width: 1px;
+  text-align: center;
+  font-size: medium; 
+}
+
 .but24 {
   height: 30px;
   width: 210px;
